# ros2-robot-control

./: .gitignore  .gitmodules  README.md
Interface/: app.py
MatLab/: control_turtlebot.m
MatLab/Controle_Trajetoria/: COST_FUNCTION2.m  DiffAngle.m  calcUsteps.m  dados.m  simulinkCart_.slx  simulinkCart_ROS_GAZEBO-pratica5.slx  simulinkCart_ROS_GAZEBO.slxc
MatLab/Controle_Trajetoria/+bus_conv_fcns/+ros2/+busToMsg/: RefCachedMap.mat
MatLab/Controle_Trajetoria/+bus_conv_fcns/+ros2/+msgToBus/: RefCachedMap.mat
MatLab/Controle_Trajetoria/slprj/_jitprj/: jitEngineAccessInfo.mat  s6lfRxhnJOewmwkavepwsl.l  s6lfRxhnJOewmwkavepwsl.mat  sEmaWaOSSyaQtHzDaM1U2qB.l  sEmaWaOSSyaQtHzDaM1U2qB.mat  sGHgpERjcvNHuMdkXuqRIRH.l  sGHgpERjcvNHuMdkXuqRIRH.mat  sMZQvWRv6gIs0EtLqYUtbYC.l  sMZQvWRv6gIs0EtLqYUtbYC.mat  sXWM9652oysHWS9UvEVgttD.l  sXWM9652oysHWS9UvEVgttD.mat  sZKQN9EC3ghaH1ovfXpxP9B.l  sZKQN9EC3ghaH1ovfXpxP9B.mat  serZbBTgalpKDkUB1q0jmlE.l  serZbBTgalpKDkUB1q0jmlE.mat  sgXvzLSxA4Ccblm3rDkwXPH.l  sgXvzLSxA4Ccblm3rDkwXPH.mat  smgML21sUjHTwwz0gjmgpbD.l  smgML21sUjHTwwz0gjmgpbD.mat  syMjh833lSTBxi4TrtroMqB.l  syMjh833lSTBxi4TrtroMqB.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/EMLReport/: Q7APyzaz42LgWxaQfSkPDB.mat  emlReportAccessInfo.mat  s6lfRxhnJOewmwkavepwsl.mat  sEmaWaOSSyaQtHzDaM1U2qB.mat  sGHgpERjcvNHuMdkXuqRIRH.mat  sMZQvWRv6gIs0EtLqYUtbYC.mat  sXWM9652oysHWS9UvEVgttD.mat  sZKQN9EC3ghaH1ovfXpxP9B.mat  serZbBTgalpKDkUB1q0jmlE.mat  sgXvzLSxA4Ccblm3rDkwXPH.mat  smgML21sUjHTwwz0gjmgpbD.mat  syMjh833lSTBxi4TrtroMqB.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/precompile/: 5LFFpyzTQOgLyLpqHtNtzG.mat  79Qk6oX0eViqlJw8xuCO1E.mat  autoInferAccessInfo.mat  azZZjhNu6WnW1QogczAHnH.mat  dRkr7hYZxtEh08zBmKMkbB.mat  iRGZoESrd0ACrZg3wiHhlE.mat  kC7rhQes1iqtDjsaMkIX5E.mat  pFkOheLZlrz4LuhEDnwSo.mat  qBG5DMYwj8mCsbEN2KpXLG.mat  zlrbO2i8I64gjqse0QPsjG.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/simulinkCart/: amsi_serial.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/simulinkCart/_self/sfun/info/: binfo.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/simulinkCart_/: amsi_serial.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/simulinkCart_/_self/sfun/info/: binfo.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/simulinkCart_ROS_GAZEBO/: amsi_serial.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/simulinkCart_ROS_GAZEBO/_self/sfun/info/: binfo.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/untitled/: amsi_serial.mat
MatLab/Controle_Trajetoria/slprj/_sfprj/untitled/_self/sfun/info/: binfo.mat
MatLab/Controle_Trajetoria/slprj/sim/varcache/simulinkCart_ROS_GAZEBO/: checksumOfCache.mat  varInfo.mat
MatLab/Controle_Trajetoria/slprj/sim/varcache/simulinkCart_ROS_GAZEBO/tmwinternal/: simulink_cache.xml
RemoteCart_teleop/: CMakeLists.txt  lwipopts.h  main.c  picow_udp_transports.c  picow_udp_transports.h
control/matlab-simulink/: README.md  control_turtlebot.m
control/matlab-simulink/Controle_Trajetoria/: COST_FUNCTION2.m  DiffAngle.m  calcRefTraj.m  calcUsteps.m  dados.m  scaleForSaturation.m
dashboard/: app.py  physics.py  requirements.txt  ros_listener.py
dashboard/static/: dashboard.js  style.css
dashboard/templates/: analysis.html  index.html
docs/: architecture.md  build-and-run.md  validation.md
esp32_robot_firmware/: CMakeLists.txt  sdkconfig.old
esp32_robot_firmware/main/: CMakeLists.txt  main.c
firmware/esp32/: sdkconfig
firmware/esp32/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/esp32/main/inc/: encoder.h  microros_node.h  motor_control.h  odometry.h  robot_config.h  robot_control.h  udp_transport.h  wifi_manager.h
firmware/esp32/main/src/: app_main.c  encoder.c  microros_node.c  motor_control.c  odometry.c  robot_control.c  udp_transport.c  wifi_manager.c
firmware/esp32/scripts/: build.sh
prototypes/esp32-http-control/remoteCart/: CMakeLists.txt  sdkconfig
prototypes/esp32-http-control/remoteCart/main/: CMakeLists.txt  Kconfig.projbuild  index.html  remoteCart.c
prototypes/esp32-http-control/remoteCart/main/inc/: motor_control.h  wifi_ap.h
prototypes/esp32-http-control/remoteCart/main/src/: app_main.c  motor_control.c  web_server.c  wifi_ap.c
prototypes/pico-microros-teleop/: CMakeLists.txt  lwipopts.h
prototypes/pico-microros-teleop/config/: remote_cart_config.h.in
prototypes/pico-microros-teleop/inc/: microros_app.h  motor_control.h  picow_udp_transport.h
prototypes/pico-microros-teleop/src/: main.c  microros_app.c  motor_control.c  picow_udp_transport.c
robot_gazebo/: ponte.py  spawn_carro.py
simulation/gazebo/: carrinho.urdf  meu_mundo.world  ponte.py  spawn_carro.py
